# gRPC_API_Assignment

./: CMakeLists.txt  README.md  gRPC_Assignment.md  gRPC_Delivery.md  grpcurl-tests.md  university.proto
src/client/: client.cpp
src/server/: server.cpp
test_results/: client_test_result.md
